--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "typescript": "^4.9.5",
