--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13"
   }
 }
