--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/react-responsive": "^8.0.8",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
