--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
