--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.0",
     "react-intersection-observer": "^9.10.2",
+    "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13"
   }
