--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-responsive": "^8.0.8",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13"
