--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
@@ -59,8 +58,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
-    "@types/react-modal": "^3.16.3",
-    "@types/react-scroll": "^1.8.10",
-    "@types/react-slick": "^0.23.13"
+    "@types/react-modal": "^3.16.3"
   }
 }
