--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.0",
     "react-intersection-observer": "^9.10.2",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "@types/react-slick": "^0.23.13"
   }
 }
