--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-responsive": "^8.0.8",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
